# ATDMasterServer

./: .gitignore  ATDMasterServer.cpp  ATDMasterServer.sln  ATDMasterServer.vcxproj  ATDMasterServer.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  CNAME  NATServer.cpp  NATServer.h  ServerBrowser.cpp  ServerBrowser.h  ServerBrowserMessageTypes.h  WebView.cpp  WebView.h  defines.h  package.json  stdafx.h
.github/workflows/: deploy.yml
CMake/: DefaultCXX.cmake
libs/raknet/: CMakeLists.txt  NatPunchthroughClient.cpp  RakNet.vcxproj  RakNet.vcxproj.filters  RakNetTypes.cpp
libs/rooms-plugin/: RoomsContainer.cpp  RoomsContainer.h  RoomsPlugin.cpp  RoomsPlugin.h
